...
              activeIcon: Icon(Icons.storefront_rounded),
              label: 'Katalog',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.receipt_long_outlined),
              activeIcon: Icon(Icons.receipt_long_rounded),
              label: 'Riwayat',
            ),
            // Tambahan Icon untuk Mekanik AI
            BottomNavigationBarItem(
              icon: Icon(Icons.smart_toy_outlined), // Icon Robot
              activeIcon: Icon(Icons.smart_toy_rounded),
              label: 'Mekanik AI',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.person_outline),
              activeIcon: Icon(Icons.person_rounded),
              label: 'Profil',
            ),
...
