...
    final theme = Theme.of(context);
    final isDark = theme.brightness == Brightness.dark;

    return Scaffold(
      backgroundColor: theme.scaffoldBackgroundColor,
      appBar: AppBar(
        title: Text('Riwayat Transaksi', style: TextStyle(fontWeight: FontWeight.bold, color: theme.colorScheme.onSurface)),
        backgroundColor: Colors.transparent,
        elevation: 0,
      ),
      // 👇 2. BUNGKUS DENGAN BLOCLISTENER UNTUK MEMUNCULKAN NOTIFIKASI
      body: BlocListener<OrderBloc, OrderState>(
        listener: (context, state) {
...
